<resources>
    <string name="app_name">Duygum</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="againpassword">Şifre(tekrar)</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
</resources>