<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/analogo"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.SignUpActivity"
    android:weightSum="1" >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/mymuudlogo"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"

        />

    <EditText
        android:id="@+id/email"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:hint="@string/email"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
         />

    <EditText
        android:id="@+id/username"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/username"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
         />

    <EditText
        android:id="@+id/name"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:hint="@string/name"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        />

    <EditText
        android:id="@+id/surname"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:hint="@string/surname"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        />



    <EditText
        android:id="@+id/password"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textColorHint="@color/black"
        android:singleLine="true"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:textAllCaps="true"/>
    <EditText
        android:id="@+id/againPassword"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:hint="@string/againpassword"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColorHint="@color/black"
        android:singleLine="true"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:textAllCaps="true"/>



    <Button
        android:id="@+id/kayit_üyeOl"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_circle"
        android:textColor="@color/white"
        android:text="KAYIT OL" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Zaten üye misiniz ?"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/kayit_girisyap"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_circle"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:text="Giris Yap" />

</LinearLayout>